Fix content-sidebar-wrap margin when no breadcrumb
Fixes https://github.com/maithemewp/mai-theme-engine/issues/207

--- a/assets/css/mai-theme.css
+++ b/assets/css/mai-theme.css
@@ -864,10 +864,6 @@ td {
 	margin-bottom: 30px;
 }
 
-.banner-area + .content-sidebar-wrap {
-	margin-top: 0;
-}
-
 .mai-sections .content-sidebar-wrap {
 	margin-top: 0;
 	margin-bottom: 0;
